<resources>
    <string name="app_name">Criminal Intent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_title_list">Crime Title</string>
    <string name="crime_date_list">Crime Date</string>
    <string name="first_button">First Crime</string>
    <string name="last_button">Last Crime</string>
</resources>
